--- a/Auth/Views/Home/Login.cshtml
+++ b/Auth/Views/Home/Login.cshtml
@@ -2,9 +2,15 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    var returnUrl = ViewData["ReturnUrl"] as string;
+    var error = TempData["Error"] as string;
 }
 <h1>Login</h1>
-<form action="/login" method="post">
+@if (!string.IsNullOrEmpty(error))
+            {
+                <h3 class="alert-danger" style="padding:10px;">@error</h3>
+            }
+<form action="/login?ReturnUrl=@System.Net.WebUtility.UrlEncode(returnUrl)" method="post">
     <input type="text" name="username" placeholder="Username" />
     <input type="password" name="password" placeholder="Password" />
     <input type="submit" value="login" />
