--- a/Auth/Views/Home/Denied.cshtml
+++ b/Auth/Views/Home/Denied.cshtml
@@ -3,5 +3,5 @@
 *@
 @{
 }
-<h1>Admin Console</h1>
-<h2>Welcome @User.Identity.Name</h2>
+<h1>Permission Denied</h1>
+<p>You do not have the rights to the page you were attempting to access.</p>
