--- a/Auth/Views/Home/Index.cshtml
+++ b/Auth/Views/Home/Index.cshtml
@@ -2,7 +2,79 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@*<div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>*@
+
+<head>
+
+    <script>
+            document.onkeydown = function (e) {
+                if (event.keyCode == 123) {
+                    return false;
+                }
+                if (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0) || e.keyCode == 'i'.charCodeAt(0))) {
+                    return false;
+                }
+                if (e.ctrlKey && e.shiftKey && (e.keyCode == 'C'.charCodeAt(0) || e.keyCode == 'c'.charCodeAt(0))) {
+                    return false;
+                }
+                if (e.ctrlKey && e.shiftKey && (e.keyCode == 'J'.charCodeAt(0) || e.keyCode == 'j'.charCodeAt(0))) {
+                    return false;
+                }
+                if (e.ctrlKey && (e.keyCode == 'U'.charCodeAt(0) || e.keyCode == 'u'.charCodeAt(0))) {
+                    return false;
+                }
+                if (e.ctrlKey && (e.keyCode == 'S'.charCodeAt(0) || e.keyCode == 's'.charCodeAt(0))) {
+                    return false;
+                }
+            }
+    </script>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Bird Project</title>
+</head>
+
+    <body oncontextmenu="return false;">
+        <header>
+            <a href="#" class="logo">Bird Project</a>
+            <ul class="navigation">
+                <li><a href="#">Home</a></li>
+                <li><a href="quizstart.html">Quiz</a></li>
+                <li><a href="#">Glossary</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Sign Up</a></li>
+                <li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>
+
+            </ul>
+        </header>
+        <div class="banner">
+            <div class="content">
+                <h2>Learn More</h2>
+                <p>
+                    Test your knowledge about birds
+                    <br>by listening through their calls
+                    @*<a href="Qu"><button type="button" class="button2">Take a Quiz</button></a>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizStart">
+                    <button type="button" class="button2">
+                        Take a Quiz
+                    </button>
+                    </a>
+                </p>
+            </div>
+            <img src="./resources/bird.png" class="image">
+        </div>
+
+        <div class="body">
+            <div class="contentSignUp">
+                <h1>Why Sign Up?</h1>
+                <img src="award.png" class="award" width="110" height="100" style="float:left">
+                <p>
+                    Get certifications by passing quizzes
+                    <br>and record your progress.
+                </p>
+
+            </div>
+        </div>
+
+    </body>
