--- a/Auth/Views/Home/Quiz.cshtml
+++ b/Auth/Views/Home/Quiz.cshtml
@@ -1,21 +1,50 @@
-<!DOCTYPE html>
-<html>
     <head>
-        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"  integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"  />
-        <link rel = "stylesheet" href ="style.css">
+        <link rel = "stylesheet" href ="./css/style.css">
         <title>Quiz</title>
     </head>
     <body>
         <header>
-            <a href="index.html" class="logo">Bird Project</a>
-            <ul class= "navigation">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="quizstart.html">Quiz</a></li>
+
+            @*<a href="index.html" class="logo">Bird Project</a>*@
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                <button type="button" class="logo">
+                    Bird Project
+                </button>
+            </a>
+
+
+            <ul class="navigation">
+
+
+                @*<li><a href="index.html">Home</a></li>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                    Home
+                </a>
+
+                @*<li><a href="quizstart.html">Quiz</a></li>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizStart">
+                    Quiz
+                </a>
+
+
                 <li><a href="#">Glossary</a></li>
+
+
                 <li><a href="#">About</a></li>
+
+
                 <li><a href="#">Sign Up</a></li>
-                <li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>
+
+
+                @*<li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">
+                    <button type="button" class="button1">
+                        Log In
+                    </button>
+                </a>
+
+
             </ul>
         </header>
         <div class="QPQuestions">
@@ -73,6 +102,5 @@
             
         </div> 
         <script src="https://unpkg.com/wavesurfer.js"></script> 
-        <script src="main.js"></script>      
+        <script src="./js/site.js"></script>      
     </body>
-</html>
