--- a/Auth/Views/Home/QuizEnd.cshtml
+++ b/Auth/Views/Home/QuizEnd.cshtml
@@ -31,13 +31,30 @@
         <body oncontextmenu="return false;">
         <header>
             <a href="index.html" class="logo">Bird Project</a>
-            <ul class= "navigation">
-                <li><a href="index.html">Home</a></li>
+
+
+            <ul class="navigation">
+
+                @*<li><a href="index.html">Home</a></li>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                    Home
+                </a>
+
                 <li><a href="quizstart.html">Quiz</a></li>
+
                 <li><a href="#">Glossary</a></li>
+
                 <li><a href="#">About</a></li>
+
                 <li><a href="#">Sign Up</a></li>
-                <li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>
+
+                @*<li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">
+                    <button type="button" class="button1">
+                        Log In
+                    </button>
+                </a>
+
             </ul>
         </header>
         <div class="QuizEnd">
