--- a/Auth/Views/Home/QuizOptions.cshtml
+++ b/Auth/Views/Home/QuizOptions.cshtml
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
     <head>
         <script>
 
@@ -24,10 +22,11 @@
                 }
             }
         </script>
-        <link rel = "stylesheet" href ="style.css">
+        <link rel = "stylesheet" href ="./css/style.css">
         <title>Quiz Options</title>
     </head>
-    <body>
+
+
         <body oncontextmenu="return false;">
         <header>
             <a href="index.html" class="logo">Bird Project</a>
@@ -69,4 +68,3 @@
             </div> 
         </div>       
     </body>
-</html>
