--- a/Auth/Views/Home/QuizStart.cshtml
+++ b/Auth/Views/Home/QuizStart.cshtml
@@ -1,48 +1,67 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        
-        <link rel = "stylesheet" href ="./css/style.css">
-        <title>Quiz</title>
-    </head>
+<head>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Quiz</title>
+</head>
     <body>
         
         <header>
-            <a href="index.html" class="logo">Bird Project</a>
-            <ul class= "navigation">
-                
-                
-                <li>                
-                @*<a href="index.html">Home</a>*@                
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                    Home                
-                </a>                
+            @*<a href="index.html" class="logo">Bird Project</a>*@
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">   
+                Bird Project            
+            </a>
+
+            
+            
+            <ul class="navigation">
+                <li>
+                    @*<a href="index.html">Home</a>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                        Home
+                    </a>
                 </li>
 
                 <li><a href="#">Quiz</a></li>
+                
                 <li><a href="#">Glossary</a></li>
+               
                 <li><a href="#">About</a></li>
+               
                 <li><a href="#">Sign Up</a></li>
 
-                <li>                
-                @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@                
+                <li>
+                    @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
                         <button type="button" class="button1">
                             Log In
                         </button>
                     </a>
                 </li>
-                
+
             </ul>
         </header>
         <div class="QPage">
             <div class="content">
-                    <img src="divider2.png" class="divider" width="700" height="100">
-                    <h2>Quiz</h2>
-                        <a href="Quiz.html"><button type="button" class="buttonsopt">Start</button></a><br>
-                        <a href="QuizOptions.html"><br><button type="button" class="buttonsopt">Go to Quiz Options</button></a><br><br>
-                    <br><img src="divider3.png" class="divider" width="700" height="100" padding=100px>
-                </div>
+                <img src="divider2.png" class="divider" width="700" height="100">
+                <h2>Quiz</h2>
+
+
+                @*<a href="Quiz.html"><button type="button" class="buttonsopt">Start</button></a><br>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
+                    <button type="button" class="buttonsopt">
+                        Start
+                    </button>
+                </a>
+
+
+                @*<a href="QuizOptions.html"><br><button type="button" class="buttonsopt">Go to Quiz Options</button></a><br><br>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizOptions">
+                    <button type="button" class="buttonsopt">
+                        Go to Quiz Options
+                    </button>
+                </a>
+
+
+                <br><img src="divider3.png" class="divider" width="700" height="100" padding=100px>
+            </div>
         </div>           
     </body>
-</html>
