--- a/Auth/Views/Home/QuizEnd.cshtml
+++ b/Auth/Views/Home/QuizEnd.cshtml
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
     <head>
         <script>
 
@@ -27,36 +25,39 @@
         <link rel = "stylesheet" href ="style.css">
         <title>Quiz Options</title>
     </head>
-    <body>
+
         <body oncontextmenu="return false;">
-        <header>
-            <a href="index.html" class="logo">Bird Project</a>
-
-
-            <ul class="navigation">
-
-                @*<li><a href="index.html">Home</a></li>*@
+            <header>
+               @*<a href="index.html" class="logo">Bird Project</a>*@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                    Home
+                    Bird Project
                 </a>
 
-                <li><a href="quizstart.html">Quiz</a></li>
 
-                <li><a href="#">Glossary</a></li>
+                <ul class="navigation">
 
-                <li><a href="#">About</a></li>
+                    @*<li><a href="index.html">Home</a></li>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                        Home
+                    </a>
 
-                <li><a href="#">Sign Up</a></li>
+                    <li><a href="quizstart.html">Quiz</a></li>
 
-                @*<li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>*@
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">
-                    <button type="button" class="button1">
-                        Log In
-                    </button>
-                </a>
+                    <li><a href="#">Glossary</a></li>
 
-            </ul>
-        </header>
+                    <li><a href="#">About</a></li>
+
+                    <li><a href="#">Sign Up</a></li>
+
+                    @*<li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">
+                        <button type="button" class="button1">
+                            Log In
+                        </button>
+                    </a>
+
+                </ul>
+            </header>
         <div class="QuizEnd">
             <div class="QuizAnswers">
                 <h2>Your score is </h2>
@@ -78,4 +79,3 @@
             </div>
         </div>       
     </body>
-</html>
