Updated toolbar to be in Layout rather than in copying the code on each page

--- a/Auth/Views/Home/QuizStart.cshtml
+++ b/Auth/Views/Home/QuizStart.cshtml
@@ -4,18 +4,18 @@
 </head>
     <body>
         
-        <header>
+        <!--<header>-->
             @*<a href="index.html" class="logo">Bird Project</a>*@
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">   
+            <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">   
                 Bird Project            
             </a>
 
             
             
             <ul class="navigation">
-                <li>
+                <li>-->
                     @*<a href="index.html">Home</a>*@
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                    <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
                         Home
                     </a>
                 </li>
@@ -28,9 +28,9 @@
                
                 <li><a href="#">Sign Up</a></li>
 
-                <li>
+                <li>-->
                     @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
+                    <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
                         <button type="button" class="button1">
                             Log In
                         </button>
@@ -38,7 +38,7 @@
                 </li>
 
             </ul>
-        </header>
+        </header>-->
         <div class="QPage">
             <div class="content">
                 <img src="divider2.png" class="divider" width="700" height="100">
