--- a/Auth/Views/Home/Index.cshtml
+++ b/Auth/Views/Home/Index.cshtml
@@ -44,7 +44,15 @@
                 <li><a href="#">Glossary</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Sign Up</a></li>
-                <li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>
+
+                <li>
+                @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
+                        <button type="button" class="button1">
+                            Log In
+                        </button>
+                    </a>                
+                </li>
 
             </ul>
         </header>
