--- a/Auth/Views/Home/Quiz.cshtml
+++ b/Auth/Views/Home/Quiz.cshtml
@@ -3,107 +3,104 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Quiz</title>
 </head>
-    
 
-    <body>
-        <header>
+<body>
+    <!--<header>-->
     @*<a href="index.html" class="logo">Bird Project</a>*@
-            <a class="logo" asp-area="" asp-controller="Home" asp-action="Index">
-                    Bird Project
-            </a>
+    <!--<a class="logo" asp-area="" asp-controller="Home" asp-action="Index">
+            Bird Project
+    </a>
 
 
-            <ul class="navigation">
-
-                @*<li><a href="index.html">Home</a></li>*@
-                <li>
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                        Home
-                    </a>
-                </li>
-
-                @*<li><a href="quizstart.html">Quiz</a></li>*@
-                <li>
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizStart">
-                        Quiz
-                    </a>
-                </li>
+    <ul class="navigation">-->
+    @*<li><a href="index.html">Home</a></li>*@
+    <!--<li>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+            Home
+        </a>
+    </li>-->
+    @*<li><a href="quizstart.html">Quiz</a></li>*@
+    <!--<li>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizStart">
+            Quiz
+        </a>
+    </li>
 
 
-                <li><a href="#">Glossary</a></li>
+    <li><a href="#">Glossary</a></li>
 
 
-                <li><a href="#">About</a></li>
+    <li><a href="#">About</a></li>
 
 
-                <li><a href="#">Sign Up</a></li>
-
-
-                @*<li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>*@
-                <li>
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">
-                        <button type="button" class="button1">
-                            Log In
-                        </button>
-                    </a>
-                </li>
-            </ul>
-        </header>
+    <li><a href="#">Sign Up</a></li>-->
+    @*<li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>*@
+    <!--<li>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">
+                    <button type="button" class="button1">
+                        Log In
+                    </button>
+                </a>
+            </li>
+        </ul>
+    </header>-->
 
 
 
-        <div class="QPQuestions">
-            <div class="Question">
-                <h2>Quiz</h2>
-                <h3>Listen to the audio and determine the species. </h3>
-                <h2><label for="Question_1">Question 1 </label></h2>
+    <div class="QPQuestions">
+        <div class="Question">
+            <h2>Quiz</h2>
+            <h3>Listen to the audio and determine the species. </h3>
+            <h2><label for="Question_1">Question 1 </label></h2>
 
-                <div class="audio-container">
-                    <div class="track-name">Bird call</div>
+            <div class="audio-container">
+                <div class="track-name">Bird call</div>
 
-                    <div class="audio"></div>
+                <div class="audio"></div>
 
-                    <div class="buttons">
-                        <span class="play-btn btn">
-                            <i class="fas fa-play"></i>
-                            <i class="fas fa-pause"></i>
-                        </span>
+                <div class="buttons">
+                    <span class="play-btn btn">
+                        <i class="fas fa-play"></i>
+                        <i class="fas fa-pause"></i>
+                    </span>
 
-                        <span class="stop-btn btn">
-                            <i class="fas fa-stop"></i>
-                        </span>
+                    <span class="stop-btn btn">
+                        <i class="fas fa-stop"></i>
+                    </span>
 
-                        <span class="mute-btn btn">
-                            <i class="fas fa-volume-up"></i>
-                            <i class="fas fa-volume-mute"></i>
-                        </span>
+                    <span class="mute-btn btn">
+                        <i class="fas fa-volume-up"></i>
+                        <i class="fas fa-volume-mute"></i>
+                    </span>
 
-                        <input type="range"
-                               min="0"
-                               max="1"
-                               step="0.1"
-                               value="0.5"
-                               class="volume-slider" />
-                    </div>
-                </div>
-
-                <audio controls>
-                    <source src="./js/birdcall.wav" type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio><br>
-
-                <select name="Question_1" id="12345">
-                    <option value="Morepork">Morepork</option>
-                    <option value="https://localhost:44358/birdquiz">https://localhost:44358/birdquiz</option>
-                </select> <br>
-                <br><a href="QuizEnd.html"><button type="button" class="buttonsopt" style="margin:10px;">Submit</button></a>
-                <div class="buttons1">
-                    <a href="#" style="text-decoration: none;">Next ></button></a>
-                    <a href="#" style="text-decoration: none;">Skip >></button></a>
+                    <input type="range"
+                           min="0"
+                           max="1"
+                           step="0.1"
+                           value="0.5"
+                           class="volume-slider" />
                 </div>
             </div>
 
+            <audio controls>
+                <source src="./js/birdcall.wav" type="audio/wav">
+                Your browser does not support the audio element.
+            </audio><br>
+
+
+            <select name="Question_1" id="12345">
+                <option value="Morepork">Morepork</option>
+                <option value="https://localhost:44358/birdquiz">https://localhost:44358/birdquiz</option>
+            </select> <br>
+            <br><a href="QuizEnd.html"><button type="button" class="buttonsopt" style="margin:10px;">Submit</button></a>
+            <div class="buttons1">
+                <a href="#" style="text-decoration: none;">Next ></button></a>
+                <a href="#" style="text-decoration: none;">Skip >></button></a>
+            </div>
+
         </div>
-        <script src="https://unpkg.com/wavesurfer.js"></script>
-        <script src="./js/site.js"></script>
-    </body>
+
+    </div>
+    <script src="https://unpkg.com/wavesurfer.js"></script>
+    <script src="./js/site.js"></script>
+</body>
