--- a/Auth/Views/Home/Index.cshtml
+++ b/Auth/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                     Test your knowledge about birds
                     <br>by listening through their calls
                     @*<a href="Qu"><button type="button" class="button2">Take a Quiz</button></a>*@
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizStart">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
                     <button type="button" class="button2">
                         Take a Quiz
                     </button>
