Adding admin page

--- a/Auth/Views/Shared/_Layout.cshtml
+++ b/Auth/Views/Shared/_Layout.cshtml
@@ -47,12 +47,26 @@
             <li>
                 @*<a href="#">Home</a>*@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                        Home
+                    Home
                 </a>
             </li>
 
 
-            <li><a href="quizstart.html">Quiz</a></li>
+            <li>
+                @*<a href="#">Home</a>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">
+                    TEST TEST
+                </a>
+            </li>
+
+
+            <li>
+                @*<a href="quizstart.html">Quiz</a>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
+                    Quiz
+                </a>
+            </li>
+
             <li><a href="#">Glossary</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Sign Up</a></li>
