--- a/Auth/Views/Home/Index.cshtml
+++ b/Auth/Views/Home/Index.cshtml
@@ -40,18 +40,35 @@
             <a href="#" class="logo">Bird Project</a>
             <ul class="navigation">
                 <li><a href="#">Home</a></li>
-                <li><a href="quizstart.html">Quiz</a></li>
+
+
+                <li>
+                    @*<a href="quizstart.html">Quiz</a>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
+                        Quiz
+                    </a>
+                </li>
+
+
+                <li>
+                    @*<a href="#">Home</a>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">
+                        TEST TEST
+                    </a>
+                </li>
+
+
                 <li><a href="#">Glossary</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Sign Up</a></li>
 
                 <li>
-                @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
+                    @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
                         <button type="button" class="button1">
                             Log In
                         </button>
-                    </a>                
+                    </a>
                 </li>
 
             </ul>
