--- a/Auth/Views/Home/Admin.cshtml
+++ b/Auth/Views/Home/Admin.cshtml
@@ -29,13 +29,28 @@
         position: relative;
         top: 50px;
     }
+
+    tr {
+        cursor: pointer;
+        transition: all .25s ease-in-out
+    }
+
+    .selected {
+        background-color: red;
+        font-weight: bold;
+        color: #fff;
+    }
 </style>
+
+
+
 
 <body>
     <div class="QPQuestions">
         <div class="Question">
 
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
+
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Save">
                 <button type="button" class="button2">
                     Add
                 </button>
@@ -52,7 +67,8 @@
             </a>
 
             <p>
-                <form action="/action_page.php">
+                @using (Html.BeginForm("Save", "Home", FormMethod.Post))
+                {
                     <label for="bname">Bird Name:</label>
                     <input type="text" id="bname" name="bname"><br><br>
                     <label for="border">Bird Order:</label>
@@ -61,9 +77,12 @@
                     <input type="text" id="bstatus" name="bstatus"><br><br>
                     <label for="border">Bird Habitat:</label>
                     <input type="text" id="bhabitat" name="bhabitat"><br><br>
+                    <label for="border">Bird ID:</label>
+                    <input type="text" id="bID" name="bID"><br><br>
+                    <label for="border">Bird Number:</label>
+                    <input type="text" id="bnum" name="bnum"><br><br>
                     <input type="submit" value="Save">
-                </form>
-
+                }
 
                 Click the "Submit" button and the form-data will be sent to a page on the
                 server called "action_page.php".
@@ -71,12 +90,12 @@
 
                 <table id="tableAdminBirdName">
                     <tr>
-                        <th>Bird</th>                        
+                        <th>Bird</th>
                     </tr>
-                    
+
                 </table>
             </p>
-            
+
         </div>
     </div>
     <script src="~/js/AdminEdit.js"></script>
