--- a/Auth/Views/Home/Index.cshtml
+++ b/Auth/Views/Home/Index.cshtml
@@ -8,29 +8,6 @@
     </div>*@
 
 <head>
-
-    <script>
-            document.onkeydown = function (e) {
-                if (event.keyCode == 123) {
-                    return false;
-                }
-                if (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0) || e.keyCode == 'i'.charCodeAt(0))) {
-                    return false;
-                }
-                if (e.ctrlKey && e.shiftKey && (e.keyCode == 'C'.charCodeAt(0) || e.keyCode == 'c'.charCodeAt(0))) {
-                    return false;
-                }
-                if (e.ctrlKey && e.shiftKey && (e.keyCode == 'J'.charCodeAt(0) || e.keyCode == 'j'.charCodeAt(0))) {
-                    return false;
-                }
-                if (e.ctrlKey && (e.keyCode == 'U'.charCodeAt(0) || e.keyCode == 'u'.charCodeAt(0))) {
-                    return false;
-                }
-                if (e.ctrlKey && (e.keyCode == 'S'.charCodeAt(0) || e.keyCode == 's'.charCodeAt(0))) {
-                    return false;
-                }
-            }
-    </script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Bird Project</title>
 </head>
@@ -53,13 +30,26 @@
                 <li>
                     @*<a href="#">Home</a>*@
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">
-                        TEST TEST
+                        Admin Page
                     </a>
                 </li>
 
 
-                <li><a href="#">Glossary</a></li>
-                <li><a href="#">About</a></li>
+                <li>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Glossary">
+                        Glossary
+                    </a>
+                </li>
+
+
+                <li>
+                    @*<a href="#">About</a>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">
+                        About
+                    </a>
+                </li>
+
+
                 <li><a href="#">Sign Up</a></li>
 
                 <li>
@@ -87,13 +77,13 @@
                     </a>
                 </p>
             </div>
-            <img src="./resources/bird.png" class="image">
+            <img src="~/resources/bird.png" class="image">
         </div>
 
         <div class="body">
             <div class="contentSignUp">
                 <h1>Why Sign Up?</h1>
-                <img src="award.png" class="award" width="110" height="100" style="float:left">
+                <img src="./resources/award.png" class="award" width="110" height="100" style="float:left">
                 <p>
                     Get certifications by passing quizzes
                     <br>and record your progress.
