--- a/Auth/Views/Home/QuizStart.cshtml
+++ b/Auth/Views/Home/QuizStart.cshtml
@@ -3,51 +3,12 @@
     <title>Quiz</title>
 </head>
 <body>
-
-
-    @*//CAN REMOVE BELOW CODE, AS IT'S ALREADY IN THE _Layout.cshtml FILE*@
-    <!--<header>-->
-    @*<a href="index.html" class="logo">Bird Project</a>*@
-    <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-        Bird Project
-    </a>
-
-
-
-    <ul class="navigation">
-        <li>-->
-    @*<a href="index.html">Home</a>*@
-    <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-            Home
-        </a>
-    </li>
-
-    <li><a href="#">Quiz</a></li>
-
-    <li><a href="#">Glossary</a></li>
-
-    <li><a href="#">About</a></li>
-
-    <li><a href="#">Sign Up</a></li>
-
-    <li>-->
-    @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
-    <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
-                    <button type="button" class="button1">
-                        Log In
-                    </button>
-                </a>
-            </li>
-
-        </ul>
-    </header>-->
-    <div class="QPage">
+<div class="QPage">
         <div class="content">
-            <img src="divider2.png" class="divider" width="700" height="100">
+            <img src="~/resources/divider2.png" class="divider" width="700" height="100">
             <h2>Quiz</h2>
 
 
-            @*<a href="Quiz.html"><button type="button" class="buttonsopt">Start</button></a><br>*@
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizDataFetch">
                 <button type="button" class="buttonsopt">
                     Start
@@ -55,7 +16,6 @@
             </a>
 
 
-            @*<a href="QuizOptions.html"><br><button type="button" class="buttonsopt">Go to Quiz Options</button></a><br><br>*@
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizOptions">
                 <button type="button" class="buttonsopt">
                     Go to Quiz Options
@@ -63,7 +23,7 @@
             </a>
 
 
-            <br><img src="divider3.png" class="divider" width="700" height="100" padding=100px>
+            <br><img src="~/resources/divider3.png" class="divider" width="700" height="100" padding=100px>
         </div>
     </div>
 </body>
