--- a/Auth/Views/Shared/_Layout.cshtml
+++ b/Auth/Views/Shared/_Layout.cshtml
@@ -1,46 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<!--<head>-->
-    @*<meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />*@
-    <!--<title>@ViewData["Title"]NZ Bird Call Training Website</title>-->
-    @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
-    <!--<link rel="stylesheet" href="./css/style.css" />
-</head>-->
 <head>
-    
-
-    @*<meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />*@
     <title>@ViewData["Title"]NZ Bird Call Training Website</title>
-    @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
     <link rel="stylesheet" href="~/css/style.css" />
-    <script>
-        document.onkeydown = function (e) {
-            if (event.keyCode == 123) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0) || e.keyCode == 'i'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'C'.charCodeAt(0) || e.keyCode == 'c'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'J'.charCodeAt(0) || e.keyCode == 'j'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'U'.charCodeAt(0) || e.keyCode == 'u'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'S'.charCodeAt(0) || e.keyCode == 's'.charCodeAt(0))) {
-                return false;
-            }
-        }
-    </script>
-        <title>Bird Project</title>
+    <title>Bird Project</title>
 </head>
 
-<body oncontextmenu="return false;">
+<body>
     <header>
         <a href="#" class="logo">Bird Project</a>
         <ul class="navigation">
@@ -53,22 +19,36 @@
 
 
             <li>
-                @*<a href="#">Home</a>*@
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">
-                    TEST TEST
-                </a>
-            </li>
-
-
-            <li>
                 @*<a href="quizstart.html">Quiz</a>*@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
                     Quiz
                 </a>
             </li>
 
-            <li><a href="#">Glossary</a></li>
-            <li><a href="#">About</a></li>
+
+            <li>
+                @*<a href="#">Home</a>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">
+                    Admin Page
+                </a>
+            </li>
+
+
+            <li>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Glossary">
+                    Glossary
+                </a>
+            </li>
+
+
+            <li>
+                @*<a href="#">About</a>*@
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">
+                    About
+                </a>
+            </li>
+
+
             <li><a href="#">Sign Up</a></li>
 
             <li>
