Updated quiz section to display quiz option html file

--- a/Auth/Views/Home/QuizOptions.cshtml
+++ b/Auth/Views/Home/QuizOptions.cshtml
@@ -39,7 +39,13 @@
             <div class="buttons">
                 <a href="#"><button type="button" class="buttonsopt" style="margin:10px;">Save</button></a>
                 <a href="#"><button type="button" class="buttonsopt" style="margin:10px;">Reset</button></a>
-                <a href="Quiz.html"><button type="button" class="buttonsopt" style="margin:5px;">Start</button></a>
-            </div> 
+
+                <button type="button" class="buttonsopt" style="margin:10px;">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
+                        Quiz
+                    </a>
+                </button>
+
+</div> 
         </div>       
     </body>
