--- a/Auth/Views/Home/QuizStart.cshtml
+++ b/Auth/Views/Home/QuizStart.cshtml
@@ -9,7 +9,7 @@
             <h2>Quiz</h2>
 
 
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizDataFetch">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
                 <button type="button" class="buttonsopt">
                     Start
                 </button>
