--- a/Auth/Views/Home/Quiz.cshtml
+++ b/Auth/Views/Home/Quiz.cshtml
@@ -13,44 +13,43 @@
 
 
 
-
 <body>
     <div class="QPQuestions">
         <div class="Question">
             <h2>Quiz</h2>
-            <h3>Question <label id="changeQNumber" for="Question_1">1</label></h3>
+            <h3>Question <label id="changeQNumber" for="Question_1">0</label></h3>
             <h4><label id="randomBird"></label></h4>
             <h4>Listen to the audio and determine the species. </h4>
 
 
             @*<div class="audio-container">
-                <div class="track-name">Bird call</div>
+                    <div class="track-name">Bird call</div>
 
-                <div class="audio"></div>
+                    <div class="audio"></div>
 
-                <div class="buttons">
-                    <span class="play-btn btn">
-                        <i class="fas fa-play"></i>
-                        <i class="fas fa-pause"></i>
-                    </span>
+                    <div class="buttons">
+                        <span class="play-btn btn">
+                            <i class="fas fa-play"></i>
+                            <i class="fas fa-pause"></i>
+                        </span>
 
-                    <span class="stop-btn btn">
-                        <i class="fas fa-stop"></i>
-                    </span>
+                        <span class="stop-btn btn">
+                            <i class="fas fa-stop"></i>
+                        </span>
 
-                    <span class="mute-btn btn">
-                        <i class="fas fa-volume-up"></i>
-                        <i class="fas fa-volume-mute"></i>
-                    </span>
+                        <span class="mute-btn btn">
+                            <i class="fas fa-volume-up"></i>
+                            <i class="fas fa-volume-mute"></i>
+                        </span>
 
-                    <input type="range"
-                           min="0"
-                           max="1"
-                           step="0.1"
-                           value="0.5"
-                           class="volume-slider" />
-                </div>
-            </div>*@
+                        <input type="range"
+                               min="0"
+                               max="1"
+                               step="0.1"
+                               value="0.5"
+                               class="volume-slider" />
+                    </div>
+                </div>*@
 
             <audio id="idOfMusicElement" controls>
                 @*TODO: pass an ID at the end of the URL below. *@
@@ -60,7 +59,7 @@
             <p id="answer"></p>
 
             @*Code for select list box*@
-            <select name="answeroptions" id="12345">
+            <select name="answeroptions" class="answers" id="12345">
             </select>
 
             <div class="buttons1">
@@ -75,5 +74,6 @@
     <script src="https://unpkg.com/wavesurfer.js"></script>
     <script src="~/js/site.js"></script>
     <script src="~/js/QuizDataFetch.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
 
