--- a/Auth/Views/Shared/_Layout.cshtml
+++ b/Auth/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
             <li>
                 @*<a href="quizstart.html">Quiz</a>*@
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizStart">
                     Quiz
                 </a>
             </li>
