--- a/Auth/Views/Home/Quiz.cshtml
+++ b/Auth/Views/Home/Quiz.cshtml
@@ -74,7 +74,7 @@
     <script src="https://unpkg.com/wavesurfer.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="~/js/site.js"></script>
-    <script src="~/js/QuizDataFetch.js"></script>
+    <script src="~/js/Quiz.js"></script>
 
 </body>
 
