Login button disappears when logged in file upload button for the birdcalls in Admin page

--- a/Auth/Views/Home/Admin.cshtml
+++ b/Auth/Views/Home/Admin.cshtml
@@ -81,7 +81,10 @@
                     <input type="text" id="bID" name="bID"><br><br>
                     <label for="border">Bird Number:</label>
                     <input type="text" id="bnum" name="bnum"><br><br>
+                    <label for="border">Upload Bird Call:</label>
+                    <input type="file" id="bcall" name="bcall"><br><br>
                     <input type="submit" value="Save">
+
                 }
 
                 Click the "Submit" button and the form-data will be sent to a page on the
