--- a/Auth/Views/Home/Index.cshtml
+++ b/Auth/Views/Home/Index.cshtml
@@ -49,19 +49,27 @@
                     </a>
                 </li>
 
+                @if (User.Identity.IsAuthenticated == false)
+                {
+                    <li><a href="#">Sign Up</a></li>
 
-                <li><a href="#">Sign Up</a></li>
+                    <li>
+                        @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
+                            <button type="button" class="button1">
+                                Log In
+                            </button>
+                        </a>
+                    </li>
+                }
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+                        </li>
+                    }
 
-                <li>
-                    @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
-                        <button type="button" class="button1">
-                            Log In
-                        </button>
-                    </a>
-                </li>
-
-            </ul>
+                </ul>
         </header>
         <div class="banner">
             <div class="content">
