--- a/Auth/Views/Shared/_Layout.cshtml
+++ b/Auth/Views/Shared/_Layout.cshtml
@@ -50,15 +50,19 @@
 
 
             <li><a href="#">Sign Up</a></li>
+            @if (User.Identity.IsAuthenticated == false)
+            { 
+                <li>
+                    @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
 
-            <li>
-                @*<a href="#"></a><button type="button" class="button1">Log In</button></a>*@
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
-                    <button type="button" class="button1">
-                        Log In
-                    </button>
-                </a>
-            </li>
+                    
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Secured">
+                        <button type="button" class="button1">
+                            Log In
+                        </button>
+                    </a>
+                </li>
+            }
             @if (User.Identity.IsAuthenticated)
             {
                 <li class="nav-item">
