Updated name to "NZ Bird Identification and Training Website"

--- a/Auth/Views/Home/Index.cshtml
+++ b/Auth/Views/Home/Index.cshtml
@@ -9,12 +9,12 @@
 
 <head>
     <link rel="stylesheet" href="./css/style.css">
-    <title>Bird Project</title>
+    <title>NZ Bird Identification and Training Website</title>
 </head>
 
     <body oncontextmenu="return false;">
         <header>
-            <a href="#" class="logo">Bird Project</a>
+            <a href="#" class="logo">NZ Bird Identification and Training Website</a>
             <ul class="navigation">
                 <li><a href="#">Home</a></li>
 
