--- a/Auth/Views/Home/QuizEnd.cshtml
+++ b/Auth/Views/Home/QuizEnd.cshtml
@@ -7,7 +7,7 @@
             <header>
                @*<a href="index.html" class="logo">Bird Project</a>*@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                    Bird Project
+                    NZ Bird Identification and Training Website
                 </a>
 
 
