--- a/Auth/Views/Home/QuizOptions.cshtml
+++ b/Auth/Views/Home/QuizOptions.cshtml
@@ -7,7 +7,7 @@
 
         <div class="QPage1">
             <h2>Quiz > Options</h2>
-            <form name="quizOptions" action="~/Home/Quiz" onsubmit="return compulsoryField()" method="post">
+            <form name="quizOptions" action="~/Home/Quiz" id="optionsSelector" onsubmit="return compulsoryField()" method="post">
                 <ul class="Options">
 
                     <li>
