--- a/Auth/Views/Shared/_Layout.cshtml
+++ b/Auth/Views/Shared/_Layout.cshtml
@@ -3,12 +3,12 @@
 <head>
     <title>@ViewData["Title"]NZ Bird Call Training Website</title>
     <link rel="stylesheet" href="~/css/style.css" />
-    <title>Bird Project</title>
+    <title>NZ Bird Identification and Training Website</title>
 </head>
 
 <body>
     <header>
-        <a href="#" class="logo">Bird Project</a>
+        <a href="#" class="logo">NZ Bird Identification and Training Website</a>
         <ul class="navigation">
             <li>
                 @*<a href="#">Home</a>*@
