--- a/Auth/Views/Home/Glossary.cshtml
+++ b/Auth/Views/Home/Glossary.cshtml
@@ -21,7 +21,7 @@
         <div id="header"></div>
         <section class="background-1">
             <div class="row">
-                <h1>Bird Project's A-to-Z Glossary of NZ Bird Terms</h1>
+                <h1>NZ Bird Identification and Training Website's A-to-Z Glossary of NZ Bird Terms</h1>
             </div>
             <div class="row">
                 <h3>Learn to express yourself like an ornithilogist with this expanded Glossary of terms</h3>
