dmin page updates

--- a/Auth/Views/Home/QuizOptions.cshtml
+++ b/Auth/Views/Home/QuizOptions.cshtml
@@ -11,7 +11,7 @@
                 <ul class="Options">
 
                     <li>
-                        <b>Enter number of questions you wish to answer*:</b> <input type="text" id="compulsoryNumber" name="number">
+                        <b>Enter number of questions you wish to answer*:</b> <input type="number" id="compulsoryNumber" name="number"> 
                     </li>
                     <li>
                         <p></p>
