Code is now displaying whether the answer is correct or not to the user

--- a/Auth/Views/Home/Quiz.cshtml
+++ b/Auth/Views/Home/Quiz.cshtml
@@ -56,9 +56,10 @@
                 @*TODO: pass an ID at the end of the URL below. *@
                 Your browser does not support the audio element.
             </audio><br>
-                       
+
 
             <p id="answer"></p>
+            <p id="result"></p>
 
             @*Code for select list box*@
             <select name="answeroptions" class="answers" id="12345">
@@ -67,6 +68,8 @@
             <div class="buttons1">
                 <button onclick="getNextQuestion()"><a style="text-decoration: none;">Next ></a></button>
             </div>
+
+
             <br><a href="QuizEnd.html"><button type="button" class="buttonsopt" style="margin:10px;">Submit</button></a>
 
 
