--- a/Auth/Views/Home/About.cshtml
+++ b/Auth/Views/Home/About.cshtml
@@ -41,7 +41,7 @@
                             <div class="span4"></div>
                         </div>
                         <div class="row span-bold">
-                            <p><span>Encourage, Organize and Promote</span> the study of birds and their habiat use , particularly within the New Zealand region</p>
+                            <p><span>Encourage, Organize and Promote</span> the study of birds and their habiat, particularly within New Zealand</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
