--- a/Auth/Views/Home/Index.cshtml
+++ b/Auth/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 
     <body oncontextmenu="return false;">
         <header>
-            <a href="#" class="logo">NZ Bird Identification and Training Website</a>
+            <a href="#" class="logo">NZ Bird Identification Training Website</a>
             <ul class="navigation">
                 <li><a href="#">Home</a></li>
 
@@ -73,15 +73,18 @@
         </header>
         <div class="banner">
             <div class="content">
-                <h2>Learn More</h2>
+                <h2>Learn more about NZ birds and their calls</h2>
+                <br>
+                <br>
+                
                 <p>
-                    Test your knowledge about birds
-                    <br>by listening through their calls
+                    
+                    <br>
                     @*<a href="Qu"><button type="button" class="button2">Take a Quiz</button></a>*@
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizStart">
-                    <button type="button" class="button2">
-                        Take a Quiz
-                    </button>
+                        <button type="button" class="button2">
+                            Take a Quiz
+                        </button>
                     </a>
                 </p>
             </div>
