--- a/Auth/Views/Home/QuizEnd.cshtml
+++ b/Auth/Views/Home/QuizEnd.cshtml
@@ -4,17 +4,17 @@
     </head>
 
         <body oncontextmenu="return false;">
-            <header>
+            <!--<header>-->
                @*<a href="index.html" class="logo">Bird Project</a>*@
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                @*<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
                     NZ Bird Identification and Training Website
-                </a>
+                </a>*@
 
 
-                <ul class="navigation">
+                <!--<!--<ul class="navigation">-->-->
 
-                    @*<li><a href="index.html">Home</a></li>*@
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                    <!--@*<li><a href="index.html">Home</a></li>*@-->
+                    <!--<!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
                         Home
                     </a>
 
@@ -24,16 +24,16 @@
 
                     <li><a href="#">About</a></li>
 
-                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="#">Sign Up</a></li>-->-->
 
-                    @*<li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>*@
+                    <!--@*<li><a href="#"></a><button type="button" class="button1">Log In</button></a></li>*@
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">
                         <button type="button" class="button1">
                             Log In
                         </button>
                     </a>
 
-                </ul>
+                </ul>-->
             </header>
         <div class="QuizEnd">
             <div class="QuizAnswers">
@@ -51,8 +51,22 @@
                 </ol>
             
                 <div class="buttons">
-                    <a href="Quiz.html"><button type="button" class="buttonsopt" style="margin:10px;">Start again</button></a>
-                    <br><a href="QuizOptions.html"><button type="button" class="buttonsopt" style="margin:10px;">Go back to Quiz Options </button></a>
+                    @*<a href="Quiz.html"><button type="button" class="buttonsopt" style="margin:10px;">Start again</button></a>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quiz">
+                        <button type="button" class="buttonsopt">
+                            Start Again
+                        </button>
+                    </a>
+
+                    <br>
+                    @*<a href="QuizOptions.html"><button type="button" class="buttonsopt" style="margin:10px;">Go back to Quiz Options </button></a>*@
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuizOptions">
+                        <button type="button" class="buttonsopt">
+                            Go back to Quiz Options
+                        </button>
+                    </a>
+
+
                 </div> 
             </div>
         </div>       
